  getUserPermissionsErrors.
* Login and signup forms are now more correct for right-to-left languages.
* Fix inconsistent section edit link size for some browsers.
* (bug 5387) Block log items on RecentChanges don't make use of possible
  translations
* (bug 11211) Pass, as a parameter to the protectedpagetext interface
  message, the level of protection.

=== API changes in 1.12 ===

Full API documentation is available at http://www.mediawiki.org/wiki/API

=== Languages updated in 1.12 ===

* Arabic (ar)
* Mapudungun (arn) (new)
* Bikol Central (bcl)
* Belarusian Taraskievica orthography (be-tarask)
* Bengali (bn)
* Cassubian (csb)
* Welsh (cy)
* Danish (da)
* German (de)
* Persian (fa)
* Frisian (fy)
* French (fr)
* Upper Sorbian (hsb)
* Kazakh (kk)
* Dutch (nl)
* Slovak (sk)
* Sakha (sah)
* Zealandic (zea)

== Compatibility ==

MediaWiki 1.12 requires PHP 5 (5.1 recommended). PHP 4 is no longer supported.

PHP 5.0.x fails on 64-bit systems due to serious bugs with array processing:
http://bugs.php.net/bug.php?id=34879
Upgrade affected systems to PHP 5.1 or higher.

MySQL 3.23.x is no longer supported; some older hosts may need to upgrade.
At this time we still recommend 4.0, but 4.1/5.0 will work fine in most cases.


== Upgrading ==

1.12 has several database changes since 1.11, and will not work without schema
updates.

If upgrading from before 1.7, you may want to run refreshLinks.php to ensure
new database fields are filled with data.

If you are upgrading from MediaWiki 1.4.x or earlier, some major database
changes are made, and there is a slightly higher chance that things could
break. Don't forget to always back up your database before upgrading!

See the file UPGRADE for more detailed upgrade instructions.


=== Caveats ===

Some output, particularly involving user-supplied inline HTML, may not
produce 100% valid or well-formed XHTML output. Testers are welcome to
set $wgMimeType = "application/xhtml+xml"; to test for remaining problem